--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,3 +77,28 @@ ul li {
     margin: 20px 0;
     cursor: pointer;
 }
+
+#score-area {
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: white;
+}
+
+#player-score {
+    font-size: larger;
+    float: left;
+    position: relative;
+    top: 10px;
+    left: 20px;
+}
+
+#computer-score {
+    font-size: larger;
+    float: right;
+    position: relative;
+    top: 10px;
+    right: 20px;
+}
